--- a/namm/RecipeView.xaml
+++ b/namm/RecipeView.xaml
@@ -79,10 +79,12 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Button Grid.Row="0" x:Name="btnSaveRecipe" Content="Lưu công thức" Width="140" HorizontalAlignment="Center" Margin="0,0,0,5" Click="BtnSaveRecipe_Click"/>
                     <Button Grid.Row="1" x:Name="btnToggleRecipeActive" Content="Ẩn/Hiện Công thức" Width="140" HorizontalAlignment="Center" Margin="0,5,0,5" Click="BtnToggleRecipeActive_Click" IsEnabled="False" Background="#FFC107" Foreground="Black"/>
                     <Button Grid.Row="2" x:Name="btnRemoveRecipe" Content="Gỡ công thức" Width="140" HorizontalAlignment="Center" Margin="0,5,0,0" Click="BtnRemoveRecipe_Click" Background="#DC3545" Foreground="White"/>
+                    <Button Grid.Row="3" x:Name="btnReset" Content="Làm mới" Width="140" HorizontalAlignment="Center" Margin="0,10,0,0" Click="BtnReset_Click" Background="#6C757D" Foreground="White"/>
                 </Grid>
             </StackPanel>
         </DockPanel>
