--- a/namm/TableView.xaml
+++ b/namm/TableView.xaml
@@ -46,18 +46,15 @@
                 <TextBlock Text="Sức chứa:" Margin="0,10,0,2"/>
                 <TextBox x:Name="txtCapacity" Padding="5"/>
 
-                <TextBlock Text="Trạng thái:" Margin="0,10,0,2"/>
-                <ComboBox x:Name="cbStatus" Padding="5">
-                    <ComboBoxItem Content="Trống"/>
-                    <ComboBoxItem Content="Có người"/>
-                </ComboBox>
+                <TextBlock Text="Trạng thái:" Margin="0,10,0,2" />
+                <TextBox x:Name="txtStatus" Padding="5" IsReadOnly="True" Background="#EEEEEE" ToolTip="Trạng thái được cập nhật tự động"/>
 
-                <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <Button x:Name="btnAdd" Content="Thêm" Width="80" Margin="5" Click="BtnAdd_Click"/>
                     <Button x:Name="btnEdit" Content="Sửa" Width="80" Margin="5" Click="BtnEdit_Click"/>
                     <Button x:Name="btnDelete" Content="Xóa" Width="80" Margin="5" Click="BtnDelete_Click"/>
-                </WrapPanel>
-                <Button x:Name="btnReset" Content="Làm mới" Width="80" Margin="5" HorizontalAlignment="Center" Click="BtnReset_Click"/>
+                    <Button x:Name="btnReset" Content="Làm mới" Width="80" Margin="5" Click="BtnReset_Click"/>
+                </StackPanel>
             </StackPanel>
         </DockPanel>
     </Grid>
